components/ingress-rules/management/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /argocd
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 80
