components/ingress-rules/management/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1


spec:
  rules:
  - http:
      paths:
      - path: /grafana/?(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
