components/ingress-rules/management/landing-page.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: management-landing-page
  namespace: landing-page
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - management.reduce.isis.cclrc.ac.uk
      secretName: management-reduce-isis-tls
  rules:
  - host: management.reduce.isis.cclrc.ac.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: management-landing-page-service
            port:
              number: 3000
