components/ingress-rules/management/management-landing-page-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: management-landing-page-ingress
  namespace: management-landing-page
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - management.reduce.isis.cclrc.ac.uk
      secretName: management-reduce-isis-tls
  rules:
  - host: management.reduce.isis.cclrc.ac.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: management-landing-page-service
            port:
              name: http
