components/ingress-rules/management/thanos-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-ingress
  namespace: monitoring-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - management.reduce.isis.cclrc.ac.uk
      secretName: management-reduce-isis-tls
  rules:
  - host: management.reduce.isis.cclrc.ac.uk
    http:
      paths:
      - path: /thanos/receive/?(.*)
        pathType: Prefix
        backend:
          service:
            name: thanos
            port:
              number: 10902
  - host: management.reduce.isis.cclrc.ac.uk
    http:
      paths:
        - path: /thanos/query/?(.*)
          pathType: Prefix
          backend:
            service:
              name: thanos
              port:
                number: 9090
